fix popup overflow-shadow, add foreignObject to for-business map

--- a/css/for-business.css
+++ b/css/for-business.css
@@ -224,17 +224,17 @@
     margin-bottom: 20px;
 }
 
-.forBusinessBlock .filterMap-content {/*add*/
+.forBusinessBlock .filterMap-content {
     display: block !important;
     padding: 10px;
 }
 
-.forBusinessBlock .dropdown-btn {/*add*/
+.forBusinessBlock .dropdown-btn {
     justify-content: center;
     cursor: default;
 }
 
-.forBusinessBlock .arrow {/*add*/
+.forBusinessBlock .arrow {
     display: none;
 }
 
@@ -283,7 +283,7 @@
     width: 100%;
 }
 
-.popupRent-item.cards_item-open div {/*add*/
+.popupRent-item.cards_item-open div {
     margin-left: 5px;
 }
 
@@ -430,12 +430,12 @@ input[type=radio]:checked{
     background-image: linear-gradient( 270deg, #ffffff 45%, #242425 45%);
 }
 
-.map_box_wrapper {/*add*/
+.map_box_wrapper {
     position: relative;
     overflow: hidden;
 }
 
-.svg-map {/*add*/
+.svg-map {
     position: relative;
     left: 0;
     top: 0;
@@ -443,8 +443,12 @@ input[type=radio]:checked{
     transform: scale(1);
 }
 
-.mapBusiness .burger-filter .menu-content {/*add*/
+.mapBusiness .burger-filter .menu-content {
     flex-direction: column;
     align-items: flex-start;
     height: 100vh;
+}
+
+.icons-block-mobile {
+    display: none;
 }
