--- a/css/style.css
+++ b/css/style.css
@@ -213,7 +213,7 @@ h1, h2, h3, h4 {
     margin-right: 10px;
 }
 
-.img-back-mobile {/*add*/
+.img-back-mobile {
     display: none;
     background: url("../images/img/main-img-mobile.jpg") center center no-repeat;
     background-size: cover;
@@ -223,7 +223,7 @@ h1, h2, h3, h4 {
     position: relative;
 }
 
-.img-back {/*add*/
+.img-back {
     display: block;
     background: url("../images/img/main-img.jpg") center center no-repeat;
     background-size: cover;
@@ -248,7 +248,7 @@ h1, h2, h3, h4 {
     display: none;
 }
 
-.burger-img-line {/*add*/
+.burger-img-line {
     position: absolute;
     top: 427px;
     width: 100%;
@@ -278,10 +278,10 @@ h1, h2, h3, h4 {
     z-index: 800;
     padding-top: 125px;
 }
-.menu-content ul {/*add*/
+.menu-content ul {
     display: flex;
     flex-direction: column;
-    z-index: 1;/*add*/
+    z-index: 1;
     /*gap: 15px;*/
 }
 .menu-content li{
@@ -401,13 +401,13 @@ h1, h2, h3, h4 {
     top: 0;
     left: -110%;
     width: 100%;
-    height: 100vh;/*add*/
+    height: 100vh;
     z-index: 1200;
-    overflow-y: scroll;/*add*/
+    overflow-y: scroll;
     transition: all 1s ease;
 }
 
-.burger-filter .menu-content {/*add*/
+.burger-filter .menu-content {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
@@ -420,12 +420,12 @@ h1, h2, h3, h4 {
     z-index: 800;
     padding: 90px 40px 40px 40px;
 }
-.burger-filter .menu-content ul {/*add*/
+.burger-filter .menu-content ul {
     display: flex;
     flex-direction: column;
     /*gap: 15px;*/
 }
-.burger-filter .menu-content li{/*add*/
+.burger-filter .menu-content li{
     font-size: 25px;
     font-weight: 600;
     line-height: 150%;
@@ -436,7 +436,7 @@ h1, h2, h3, h4 {
     text-align: start;
 }
 
-.burger-filter .menu-content li a {/*add*/
+.burger-filter .menu-content li a {
     font-family: Raleway, sans-serif;
     font-size: 60px;
     font-style: normal;
@@ -484,7 +484,7 @@ h1, h2, h3, h4 {
 }
 
 /* Animation of the burger icon*/
-.burger-iconFilter.active {/*add*/
+.burger-iconFilter.active {
     display: none;
     /*position: relative;*/
     /*bottom: 457px;*/
@@ -671,6 +671,7 @@ span.header-link-text {
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
     display: none;
+    z-index: 99;
 }
 
 #overlay {
@@ -717,7 +718,7 @@ span.header-link-text {
     margin-bottom: 30px;
 }
 
-.pop_up-filter .pop_up-filter-info div {
+.pop_up-filter .pop_up-filter-info .popupRent-item {
     margin: 0 40px;
 }
 
@@ -893,7 +894,7 @@ section.scroll-wrapper {
     justify-content: flex-end;
     position: relative;
     top: 119px;
-    z-index: 1;/*add*/
+    z-index: 1;
 }
 
 .all-shops-btn {
